dist/bambuddy/Ingress.bambuddy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: bambuddy
  name: bambuddy
  namespace: bambuddy
spec:
  rules:
    - host: bambuddy.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: bambuddy
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - bambuddy.cmdcentral.xyz
      secretName: bambuddy-tls
